--- a/2.Load environment/samples/telegraf/telegraf/etc/telegraf.conf
+++ b/2.Load environment/samples/telegraf/telegraf/etc/telegraf.conf
@@ -17,7 +17,7 @@
 # Configuration for telegraf agent
 [agent]
   ## Default data collection interval for all inputs
-  interval = "5s"
+  interval = "60s"
   ## Rounds collection interval to 'interval'
   ## ie, if interval="10s" then always collect on :00, :10, :20, etc.
   round_interval = true
@@ -166,4 +166,28 @@
   # no configuration
 
 [[inputs.linux_sysctl_fs]]
+  # no configuration
+
+# Read metrics about memory usage
+[[inputs.mem]]
+  # no configuration
+
+# Read metrics about swap memory usage
+[[inputs.swap]]
+  # no configuration
+
+# Read metrics about disk usage by mount point
+[[inputs.disk]]
+  # no configuration
+
+# Read metrics about disk IO by device
+[[inputs.diskio]]
+  # no configuration
+
+# Read metrics about network interface usage
+[[inputs.net]]
+  # no configuration
+
+# Read metrics about TCP connections
+[[inputs.netstat]]
   # no configuration
